--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "funcn",
+  "name": "levelier",
   "version": "1.0.0",
-  "description": "A Discord bot to assist Fizx.",
+  "description": "An open-source Discord leveling bot using HexoDB.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.3.1",
     "ascii-table": "^0.0.9",
     "hexo-db": "^1.5.0"
   },
